# dmi2svg

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  opacity_map.rs
test_dmis/: test.dmi  weird_size.dmi
