[package]
name = "dmi2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contour_tracing = {version = "1.0.12", features = ["array"] }
base64 = "0.21.2"
dmi = "0.3.0"
image = { version = "0.24.6", default-features = false }
thiserror = "1.0.44"
rayon = "1.7.0"
